workloads/minio/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-fs
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: fs-john2143-https
  hostnames:
    - fs.john2143.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9000
